src/App.css
* {
	padding: 0px;
	margin: 0px;
	box-sizing: border-box;
}
body {
	background-color: #faf3e0;
}
button {
	cursor: pointer;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	text-align: left;

	border: 2px solid #b68973;
	border-radius: 25px;
	background-color: #eabf9f;

	margin: 10px;
	padding: 15px;
}
img {
	width: 70%;
	margin: 10px 10%;

	border: 2px solid #b68973;
	border-radius: 25px;
}
p {
	margin: 10px 0px;
}
svg {
	width: 20px;
	height: 20px;
	margin: 10px;

	flex-shrink: 0;
}
.container {
	min-height: 100vh;
	display: flex;
	flex-direction: column;
}
.header {
	text-align: center;
}
.header h1 {
	margin: 50px;
}
.header img {
	margin-bottom: 70px;
}
.main {
	display: flex;
	flex-direction: column;
	margin-inline: 15%;
}
.footer {
	margin-top: auto;
	padding: 30px;

	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
}

